--- a/iteration.html
+++ b/iteration.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <script> 
-    `112` `Collatz` `color` `EvaristGalois`
+    `NP` `Collatz` `Letter` `EvaristGalois`
     </script>
 </head>
-`NP` `Letter` `InventorySlot`
+`112` `color` `tensor`
 <body>
     <script>
-    `return` `tensor` `XYZT` `worldsheet`
+    `return` `InventorySlot` `XYZT` `worldsheet`
     </script>
 </body>            
 </html>
